Stop the weird scrollbars.

--- a/cmd/server/static/styles.css
+++ b/cmd/server/static/styles.css
@@ -83,6 +83,7 @@ nav strong {
     padding-bottom: 3rem;
     min-height: calc(100vh - 60px);
     overflow-x: auto;
+    overflow-y: hidden;
     justify-content: safe center;
     align-items: flex-start;
 }
@@ -213,7 +214,7 @@ nav strong {
 }
 
 .list-action-btn:hover {
-    opacity: 0.7;
+    opacity: 0.4;
 }
 
 /* Touch Device Overrides */
